--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "blender-mcp"
-version = "1.2"
-description = "Blender integration through the Model Context Protocol"
+name = "aframe-mcp"
+version = "0.1.0"
+description = "A-Frame VR integration through the Model Context Protocol"
 readme = "README.md"
 requires-python = ">=3.10"
 authors = [
@@ -15,10 +15,12 @@ classifiers = [
 ]
 dependencies = [
     "mcp[cli]>=1.3.0",
+    "websockets>=12.0",
 ]
 
 [project.scripts]
-blender-mcp = "blender_mcp.server:main"
+aframe-mcp = "aframe_mcp.server:main"
+aframe-mcp-bridge = "aframe_mcp.bridge_server:main"
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
@@ -28,5 +30,5 @@ build-backend = "setuptools.build_meta"
 package-dir = {"" = "src"}
 
 [project.urls]
-"Homepage" = "https://github.com/yourusername/blender-mcp"
-"Bug Tracker" = "https://github.com/yourusername/blender-mcp/issues"
+"Homepage" = "https://github.com/yourusername/aframe-mcp"
+"Bug Tracker" = "https://github.com/yourusername/aframe-mcp/issues"
